<resources>
    <string name="app_name">Smart Notes</string>
    <string name="view_note">Просмотр</string>
    <string name="to_edit">Редактировать</string>
    <string name="new_note">Новая заметка</string>
    <string name="note_tile">Имя:</string>
    <string name="note_body">Описание:</string>
    <string name="enter_note_name">Введите имя заметки</string>
    <string name="enter_note_body">Введите описание заметки</string>
    <string name="importance_of_note">Важность:</string>
    <string name="to_save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="no_importance">Неважная</string>
    <string name="name_is_not_entered">Имя не введено!</string>
    <string name="note_is_edited">Заметка изменена</string>
    <string name="note_is_saved">Заметка сохранена</string>
    <string name="note_is_deleted">Заметка удалена</string>
    <string name="export_to_txt">Экспортировать в .txt</string>
    <string name="to_choose_directory">Выбрать директорию</string>
    <string name="to_choose">Выбрать</string>
    <string name="storage_permissions_are_not_granted">Права для операций с фото не были предоставлены</string>
    <string name="location_permissions_are_not_granted">Права для определения местоположения не были предоставлены</string>
    <string name="note_is_exported">Заметка экспортирована</string>
    <string name="error">Ошибка</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="photo">Фотография</string>
    <string name="view">Просмотр</string>
    <string name="title_activity_maps">Карта</string>
    <string name="no_geodata">Геоданные не указаны</string>
    <string name="location_is_not_availiable">Геоданные не указаны</string>
    <string name="delete_note_confirmation">Вы уверены, что хотите удалить заметку?</string>
    <string name="to_delete">Удалить</string>
    <string name="to_share">Поделиться</string>
    <string name="note_share">Заметка:</string>
    <string name="published_with_smart_notes">Опубликовано через Smart Notes</string>
    <string name="note">Заметка</string>
    <string name="is_published">опубликована</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="external_storage_is_invalid">Внешний накопитель не доступен</string>
    <string name="autorization_is_required">Требуется авторизация</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="location">Местоположение</string>
    <string name="longitude">Долгота</string>
    <string name="lattitude">Широта</string>
    <string name="red_importance">Срочная</string>
    <string name="yellow_importance">Важная</string>
    <string name="green_importance">Обычная</string>
    <string name="name_text_view">Имя заметки:</string>
    <string name="body_text_view">Описание:</string>
    <string name="camera_is_not_available">Камера не доступна</string>
    <string name="gallery_is_not_available">Галлерея не доступна</string>


    <string name="facebook_app_id">162705600963380</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">itVK08E3ssK5RpN6xn8S9pMOO</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">S0yo8INBWHeVhsnq0RsmjZRyfgAKyuUeNM2HkyxIbpjX2kVHTW</string>
</resources>
