<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/to_edit"
        android:id="@+id/edit_note"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:title="@string/to_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:id="@+id/share_note"/>

    <item
        android:title="@string/to_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:id="@+id/delete_note"/>


</menu>