<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="5dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->

    <LinearLayout
        android:id="@+id/importance_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greenImportance"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:text="@string/note_tile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/note_title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_note_name"
                    android:padding="3dp"
                    android:inputType="text"
                    android:textSize="20sp" />

            </ScrollView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/note_body"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <EditText
                android:id="@+id/note_body_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_note_body"
                android:padding="5dp"
                android:inputType="textMultiLine"
                android:textSize="20sp" />

        </ScrollView>

    </LinearLayout>

    <!--    </ScrollView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/importance_of_note"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <Spinner
            android:id="@+id/importance_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/to_save"
            android:textColor="@color/textColorButton" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/redImportance"
            android:text="@string/to_cancel"
            android:textColor="@color/textColorButton" />

    </LinearLayout>

</LinearLayout>